--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -1,16 +1,14 @@
-//Jenkinsfile (Scripted Pipeline)
-node {  
-    stage('Build') { 
-        checkout scm
-        def customImage = docker.build("lgordillom/to-do-app:$env.BUILD_ID")
-        docker.withRegistry('', 'DockerHub') {
-            customImage.push("$env.BUILD_ID")
-        }
-    }
-    stage('Test') { 
-        // 
-    }
-    stage('Deploy') { 
-        
-    }
-}
+ode {  
+   stage('Build') { 
+       checkout scm
+       def customImage = docker.build("lgordillom/to-do-app:$env.BUILD_ID")
+       docker.withRegistry('', 'DockerHub') {
+           customImage.push("$env.BUILD_ID")
+       }
+   }
+   stage('Test') { 
+       // 
+   }
+   stage('Deploy') { 
+       
+   }
